--- a/index.html
+++ b/index.html
@@ -193,15 +193,14 @@
                     <div class="project-content">
                         <h3 class="project-title">E-Commerce Platform</h3>
                         <p class="project-description">
-                            A full-featured e-commerce website with product management, shopping cart,
-                            and secure payment integration.
+                            A full-featured e-commerce website with product management and shopping cart
                         </p>
                         <div class="project-tags">
-                            <span class="tag">React</span>
-                            <span class="tag">Node.js</span>
-                            <span class="tag">MongoDB</span>
+                            <span class="tag">HTML</span>
+                            <span class="tag">CSS</span>
+                            <span class="tag">JavaScript</span>
                         </div>
-                        <a href="#" class="project-link">
+                        <a href="wild-mountain/index.html" class="project-link">
                             View Project
                             <span>→</span>
                         </a>
