added _blank in targett

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <span class="tag">CSS</span>
                             <span class="tag">JavaScript</span>
                         </div>
-                        <a href="wild-mountain/index.html" class="project-link">
+                        <a href="wild-mountain/index.html" class="project-link" target="_blank">
                             View Project
                             <span>→</span>
                         </a>
