--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta name="author" content="Mahinder">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Mahinder - Full Stack Developer">
-    <meta property="og:description" content="Full Stack Developer from India specializing in modern web technologies">
+    <meta property="og:title" content="Mahinder - Full Stack Designer">
+    <meta property="og:description" content="Full Stack Designer from India specializing in modern web technologies">
     <meta property="og:type" content="website">
 
-    <title>Mahinder - Full Stack Developer | Portfolio</title>
+    <title>Mahinder - Full Stack Designer | Portfolio</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
