--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Mahinder - Full Stack Developer from India specializing in HTML, CSS, JavaScript, React, Node.js, Next.js, PHP, and Python. View my portfolio and projects.">
+        content="Mahinder - Full Stack Designer from India specializing in HTML, CSS, JavaScript, React, Node.js, Next.js, PHP, and Python. View my portfolio and projects.">
     <meta name="keywords"
-        content="Mahinder, Full Stack Developer, Web Developer, India, React, Next.js, PHP, Python, JavaScript">
+        content="Mahinder, Full Stack Designer, Web Designer, India, React, Next.js, PHP, Python, JavaScript">
     <meta name="author" content="Mahinder">
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Mahinder - Full Stack Designer">
-    <meta property="og:description" content="Full Stack Designer from India specializing in modern web technologies">
+    <meta property="og:description" content="Full Stack Designer from India specializing in modern web design">
     <meta property="og:type" content="website">
 
     <title>Mahinder - Full Stack Designer | Portfolio</title>
