tour and travel website publish

--- a/index.html
+++ b/index.html
@@ -230,17 +230,16 @@
                 <div class="project-card scroll-reveal">
                     <div class="project-image">🎨</div>
                     <div class="project-content">
-                        <h3 class="project-title">Portfolio CMS</h3>
+                        <h3 class="project-title">Tour And Travel</h3>
                         <p class="project-description">
-                            A content management system for creative professionals to showcase
-                            their work with customizable themes.
+                            A tour and travel website.
                         </p>
                         <div class="project-tags">
-                            <span class="tag">PHP</span>
-                            <span class="tag">MySQL</span>
-                            <span class="tag">jQuery</span>
+                            <span class="tag">HTML</span>
+                            <span class="tag">Css</span>
+                            <span class="tag">Javascript</span>
                         </div>
-                        <a href="#" class="project-link">
+                        <a href="bhandari_tour_and_travel/index.html" class="project-link">
                             View Project
                             <span>→</span>
                         </a>
