--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             <span class="tag">Css</span>
                             <span class="tag">Javascript</span>
                         </div>
-                        <a href="bhandari_tour_and_travel/index.html" class="project-link">
+                        <a href="bhandari_tour_and_travel/index.html" class="project-link" target="_blank">
                             View Project
                             <span>→</span>
                         </a>
@@ -249,17 +249,16 @@
                 <div class="project-card scroll-reveal">
                     <div class="project-image">🤖</div>
                     <div class="project-content">
-                        <h3 class="project-title">AI Chat Application</h3>
+                        <h3 class="project-title">Business Website - BlackShield</h3>
                         <p class="project-description">
-                            An intelligent chatbot application using natural language processing
-                            for customer support automation.
+                            An website security enhancers business website
                         </p>
                         <div class="project-tags">
-                            <span class="tag">Python</span>
-                            <span class="tag">Flask</span>
-                            <span class="tag">AI/ML</span>
+                            <span class="tag">HTML</span>
+                            <span class="tag">Css</span>
+                            <span class="tag">JavaScript</span>
                         </div>
-                        <a href="#" class="project-link">
+                        <a href="businessWebsite/index.html" class="project-link" target="_blank">
                             View Project
                             <span>→</span>
                         </a>
