Adding products section in index.html present in root directory

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#product">Product</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="menu-toggle" id="menuToggle">
@@ -63,9 +64,9 @@
                         View My Work
                         <span>→</span>
                     </a>
-                    <a href="#contact" class="btn btn-secondary">
-                        Get In Touch
-                        <span>✉</span>
+                    <a href="#product" class="btn btn-secondary">
+                        View Product
+                        <span>🛡️</span>
                     </a>
                 </div>
             </div>
@@ -303,6 +304,41 @@
                             <span>→</span>
                         </a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Product Section -->
+    <section class="product" id="product">
+        <div class="section-header scroll-reveal">
+            <h2 class="section-title">Premium Product</h2>
+            <p class="section-description">
+                High-quality digital tools designed to enhance your workflow and security.
+            </p>
+        </div>
+        <div class="product-container">
+            <div class="featured-product-card scroll-reveal">
+                <div class="product-visual">
+                    <img src="images/webraptor-scanner.png" alt="WebRaptor Scanner" class="product-img">
+                </div>
+                <div class="product-info">
+                    <h3 class="product-name">WebRaptor Scanner</h3>
+                    <p class="product-desc">
+                        Advanced Website Reconnaissance & Vulnerability Scanner.
+                        Automate your security testing with powerful scanning capabilities,
+                        detailed reporting, and a user-friendly interface.
+                    </p>
+                    <ul class="product-features">
+                        <li>✅ Vulnerability Detection</li>
+                        <li>✅ Security Headers Analysis</li>
+                        <li>✅ Comprehensive Reports</li>
+                        <li>✅ Dark Mode GUI</li>
+                    </ul>
+                    <a href="https://trifalic.gumroad.com/l/WebRaptorScanner" class="btn btn-primary" target="_blank">
+                        Get It Now
+                        <span>→</span>
+                    </a>
                 </div>
             </div>
         </div>
