Adding products section in index.html present in root directory----------

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <img src="images/webraptor-scanner.png" alt="WebRaptor Scanner" class="product-img">
                 </div>
                 <div class="product-info">
-                    <h3 class="product-name">WebRaptor Scanner</h3>
+                    <h3 class="product-name">WebRaptor Scanner v1.0</h3>
                     <p class="product-desc">
                         Advanced Website Reconnaissance & Vulnerability Scanner.
                         Automate your security testing with powerful scanning capabilities,
