Updating index.html and style.css

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             </div>
             <div class="hero-visual">
                 <div class="profile-card">
-                    <div class="profile-image"></div>
+                    <div class="profile-image">
+                        <img src="images/profile.png" alt="Mahinder" class="profile-img-content">
+                    </div>
                     <div class="stats-grid">
                         <div class="stat-item">
                             <div class="stat-number">50+</div>
