Add canvas animation to profile image

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <div class="hero-visual">
                 <div class="profile-card">
                     <div class="profile-image">
+                        <canvas id="profileCanvas"></canvas>
                         <img src="images/profile.png" alt="Mahinder" class="profile-img-content">
                     </div>
                     <div class="stats-grid">
@@ -425,6 +426,7 @@
 
     <!-- JavaScript -->
     <script src="script.js"></script>
+    <script src="profile-animation.js"></script>
 </body>
 
 </html>
