--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         rel="stylesheet">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css?v=1.1">
+    <link rel="stylesheet" href="style.css?v=1.2">
 </head>
 
 <body>
@@ -425,8 +425,8 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
-    <script src="profile-animation.js"></script>
+    <script src="script.js?v=1.2"></script>
+    <script src="profile-animation.js?v=1.2"></script>
 </body>
 
 </html>
